<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/connct_white"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context=".signuppage">

    <TextView
        android:id="@+id/signup_container"
        android:layout_width="238dp"
        android:layout_height="83dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/avenir"
        android:gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textColor="@color/connct_button"
        android:textSize="65dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/username_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center_horizontal"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_container" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/verifyPassword_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <EditText
        android:id="@+id/verifyPassword_field"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center_horizontal"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/finishSignUp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <Button
        android:id="@+id/finishSignUp_button"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:background="@color/connct_button"
        android:onClick="sendSignUp"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/connct_white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyPassword_field" />

</android.support.constraint.ConstraintLayout>