<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/connct_theme"
    tools:context=".loginpage">

    <TextView
        android:id="@+id/signup_container"
        android:layout_width="286dp"
        android:layout_height="83dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:textSize="85dp"
        android:fontFamily="@font/avenir"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/connct_white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_field"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:height="10dp"
        android:background="@color/connct_white"
        android:ems="1"
        android:gravity="center"
        android:hint="@string/email_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_container" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="341dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/connct_white"
        android:ems="50"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_field"
        app:layout_constraintStart_toStartOf="@+id/login_field"
        app:layout_constraintTop_toBottomOf="@+id/login_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="182dp"
        android:layout_height="69dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/connct_button"
        android:onClick="tryLogin"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/connct_white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="105dp"
        android:layout_height="41dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="@color/connct_theme"
        android:fontFamily="@font/avenir"
        android:onClick="pullSignUp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/connct_white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.333" />

</android.support.constraint.ConstraintLayout>